# svineklanica

./: .cursorrules  .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Caddyfile  DEPLOY.md  Dockerfile  Dockerfile.prod  GEMINI.md  MERGE_REPORT.md  Makefile  README.md  SOURCES.md  commands.txt  composer.json  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  phpunit.xml  plan.txt
apps/ai/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/ai/src/analyzer/: __init__.py  config.py  context.py  llm.py  orchestrator.py  payload.py  routing.py  run.py  schemas.py  scoring.py  spheres.py
apps/ai/src/analyzer/agents/: __init__.py  aggregator.py  audit_findings.py  base.py  category_router.py  (+16 more)
apps/ai/tests/: conftest.py  test_features.py  test_government_flows.py  test_healthcare_flows.py  test_judiciary_flows.py  test_live_llm.py  test_payload.py  test_pipeline.py  test_police_flows.py  test_prompts.py  test_roads_flows.py  test_routing.py  test_scoring.py  test_sink.py
apps/scraper/: .env.example  AGENTS.md  Dockerfile  README.md  pyproject.toml
apps/scraper/src/scraper/: __init__.py  browser.py  config.py  contract.py  corpus.py  embed.py  embeddings.py  encoding.py  http.py  keyword.py  normalize.py  registry.py  run.py  search.py  searchable.py  spheres.py
apps/scraper/tests/: conftest.py  test_contract.py  test_embed_cli.py  test_embeddings.py  test_encoding.py  test_http.py  test_ivss_declarations.py  test_live_network.py  test_mjs_assets.py  test_mvr.py  test_mvr_assets.py  test_mvr_donations.py  test_mvr_jobs.py  test_mz.py  test_mz_assets.py  test_mz_jobs.py  test_ncpr.py  test_nhif.py  test_normalize.py  test_prb.py  test_search.py  test_searchable.py  test_sinks.py  test_sources.py  test_spheres.py  test_tagging.py  test_vss.py  test_vss_jobs.py
apps/scraper/tests/fixtures/: aop_sample.html  api_jobs.html  api_projects.html  api_tenders.html  avtomagistrali_tenders.html  caiseop_sample.csv  egov_sample.json  eop_sample.html  gov_audits.html  gov_concessions.html  gov_declarations.html  gov_jobs.html  gov_tenders.html  isun_sample.html  ivss_declarations_sample.html  mjs_assets_sample.html  mrrb_tenders.html  mvr_assets_sample.html  mvr_donations_sample.html  mvr_jobs_sample.html  mvr_sample.html  mz_assets_sample.html  mz_jobs_sample.html  mz_sample.html  ncpr_sample.csv  nhif_sample.html  prb_sample.html  sebra_sample.csv  ted_sample.json  vss_jobs_sample.html  vss_sample.html
(+625 files in other folders)
